# terminal

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.txt  Jenkinsfile  Jenkinsfile2  Jenkinsfile_nightly  LICENSE  Makefile.am  README-dockerfile.md  README.md  build.sh  changelog.json  changlelog.json  configure.ac  generate.py  prepeare_release.py  terminal.cppcheck  ubuntu.Dockerfile
BlockSettleApp/: CMakeLists.txt  blocksettle.rc  macosapp.cpp  macosapp.h  main.cpp
BlockSettleHW/: CMakeLists.txt  hwcommonstructure.cpp  hwcommonstructure.h  hwdeviceabstract.h  hwdeviceinterface.h  hwdevicemanager.cpp  hwdevicemanager.h  hwdevicemodel.cpp  hwdevicemodel.h
BlockSettleSigner/: AuthProxy.cpp  AuthProxy.h  Bip39EntryValidator.cpp  Bip39EntryValidator.h  CMakeLists.txt  EasyEncValidator.cpp  EasyEncValidator.h  FrejaProxy.cpp  FrejaProxy.h  HeadlessApp.cpp  HeadlessApp.h  HeadlessSettings.cpp  HeadlessSettings.h  NativeEventFilter.cpp  NativeEventFilter.h  NewWalletSeed.cpp  NewWalletSeed.h  OfflineProcessor.cpp  OfflineProcessor.h  PasswordConfirmValidator.cpp  PasswordConfirmValidator.h  PdfBackupQmlPrinter.cpp  PdfBackupQmlPrinter.h  QMLApp.cpp  QMLApp.h  QMLStatusUpdater.cpp  QMLStatusUpdater.h  QWalletInfo.cpp  QWalletInfo.h  QmlBridge.cpp  QmlBridge.h  QmlCallbackImpl.h  QmlFactory.cpp  QmlFactory.h  QmlWalletsViewModel.cpp  QmlWalletsViewModel.h  SignerAdapter.cpp  SignerAdapter.h  SignerAdapterContainer.cpp  SignerAdapterContainer.h  (+15 more)
BlockSettleTracker/: BsTrackerVersion.h.in  CMakeLists.txt  main.cpp
BlockSettleUILib/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddressDetailDialog.cpp  AddressDetailDialog.h  AddressDetailDialog.ui  AddressDetailsWidget.cpp  AddressDetailsWidget.h  AddressDetailsWidget.ui  AddressListModel.cpp  AddressListModel.h  ApiKeyEntryDialog.cpp  ApiKeyEntryDialog.h  ApiKeyEntryDialog.ui  ArmoryServersViewModel.cpp  ArmoryServersViewModel.h  ArmoryServersWidget.cpp  ArmoryServersWidget.h  ArmoryServersWidget.ui  AuthAddressConfirmDialog.cpp  AuthAddressConfirmDialog.h  AuthAddressConfirmDialog.ui  AuthAddressDialog.cpp  AuthAddressDialog.h  AuthAddressDialog.ui  AuthAddressViewModel.cpp  AuthAddressViewModel.h  AuthNotice.cpp  AuthNotice.h  AuthNotice.ui  BSChatInput.cpp  BSChatInput.h  BSMessageBox.cpp  BSMessageBox.h  BSMessageBox.ui  BSTerminalMainWindow.cpp  BSTerminalMainWindow.h  BSTerminalMainWindow.ui  BSTerminalSplashScreen.cpp  BSTerminalSplashScreen.h  (+451 more)
BlocksettleNetworkingLib/: ActiveStreamClient.cpp  ActiveStreamClient.h  AddressVerificationPool.cpp  AddressVerificationPool.h  AddressVerificator.cpp  AddressVerificator.h  ApplicationSettings.cpp  ApplicationSettings.h  ArmoryEventsPublisher.cpp  ArmoryEventsPublisher.h  ArmoryEventsSubscriber.cpp  ArmoryEventsSubscriber.h  ArmoryObject.cpp  ArmoryObject.h  ArmoryServersProvider.cpp  ArmoryServersProvider.h  ArmorySettings.h  AssetManager.cpp  AssetManager.h  AuthAddressLogic.cpp  AuthAddressLogic.h  AuthAddressManager.cpp  AuthAddressManager.h  AuthSignManager.cpp  AuthSignManager.h  AutheIDClient.cpp  AutheIDClient.h  BIP150_151.cpp  BIP150_151.h  BSErrorCode.h  BSErrorCodeStrings.h  BSMarketDataProvider.cpp  BSMarketDataProvider.h  BaseCelerClient.cpp  BaseCelerClient.h  BaseChatClient.cpp  BaseChatClient.h  BitcoinFeeCache.cpp  BitcoinFeeCache.h  BsClient.cpp  (+224 more)
Blocksettle_proto/: CMakeLists.txt
CommonLib/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatProtocol.cpp  ChatProtocol.h  ChatServer.cpp  ChatServer.h  CurrencyPair.cpp  CurrencyPair.h  DispatchQueue.cpp  DispatchQueue.h  EasyCoDec.cpp  EasyCoDec.h  FastLock.cpp  FastLock.h  FutureValue.h  INIReader.h  IdenticalTimersQueue.cpp  IdenticalTimersQueue.h  LogManager.cpp  LogManager.h  ManualResetEvent.cpp  ManualResetEvent.h  ProcessControl.cpp  ProcessControl.h  SettableField.h  SignalsHandler.cpp  SignalsHandler.h  SingleShotTimer.cpp  SingleShotTimer.h  StringUtils.cpp  StringUtils.h  SystemFileUtils.cpp  SystemFileUtils.h  ThreadName.cpp  ThreadName.h  ValidityFlag.cpp  ValidityFlag.h  ZBase32.cpp  ZBase32.h  (+6 more)
CommonUI/: AppNap.h  AppNap.mm  CMakeLists.txt  CommonUI.qrc  DBusNotification.cpp  DBusNotification.h  PDFWriter.cpp  PDFWriter.h  PaperBackupWriter.cpp  PaperBackupWriter.h  SslCaBundle.cpp  SslCaBundle.h
Core/: ApiAdapter.cpp  ApiAdapter.h  ApiJson.cpp  ApiJson.h  ArmoryServersProvider.cpp  ArmoryServersProvider.h  AssetsAdapter.cpp  AssetsAdapter.h  BsServerAdapter.cpp  BsServerAdapter.h  CMakeLists.txt  ChatAdapter.cpp  ChatAdapter.h  MDHistAdapter.cpp  MDHistAdapter.h  MatchingAdapter.cpp  MatchingAdapter.h  MessageUtils.cpp  MessageUtils.h  MktDataAdapter.cpp  MktDataAdapter.h  SettingsAdapter.cpp  SettingsAdapter.h  SettlementAdapter.cpp  SettlementAdapter.h  SignerAdapter.cpp  SignerAdapter.h  TerminalMessage.cpp  TerminalMessage.h
GUI/: CMakeLists.txt
UnitTests/: BlockchainMonitor.cpp  BlockchainMonitor.h  CMakeLists.txt  MockAssetMgr.cpp  MockAssetMgr.h  MockAuthAddrMgr.cpp  MockAuthAddrMgr.h  MockTerminal.cpp  MockTerminal.h  TestAdapters.cpp  TestAdapters.h  TestAddress.cpp  TestArmory.cpp  TestAuth.cpp  TestAuth.h  TestAuthEid.cpp  TestCC.cpp  TestCC.h  TestCCoin.cpp  TestCCoin.h  TestCCoinAsync.cpp  TestCCoinAsync.h  TestChat.cpp  TestCommon.cpp  TestEnv.cpp  TestEnv.h  TestNetwork.cpp  TestOtc.cpp  TestSettlement.cpp  TestSettlement.h  TestUi.cpp  TestWallet.cpp  TestWalletArmory.cpp  TestWebSockets.cpp  main.cpp
WalletsLib/: Address.cpp  Address.h  AddressVerificationPool.cpp  AddressVerificationPool.h  AddressVerificator.cpp  AddressVerificator.h  ApplicationSettings.cpp  ApplicationSettings.h  ArmoryConnection.cpp  ArmoryConnection.h  ArmoryServersProvider.cpp  ArmoryServersProvider.h  ArmorySettings.h  AuthAddress.cpp  AuthAddress.h  BTCNumericTypes.h  BtcDefinitions.h  CMakeLists.txt  CacheFile.cpp  CacheFile.h  CheckRecipSigner.cpp  CheckRecipSigner.h  CoreHDGroup.cpp  CoreHDGroup.h  CoreHDLeaf.cpp  CoreHDLeaf.h  CoreHDNode.cpp  CoreHDNode.h  CoreHDWallet.cpp  CoreHDWallet.h  CorePlainWallet.cpp  CorePlainWallet.h  CoreSettlementWallet.cpp  CoreWallet.cpp  (+50 more)
(+1475 files in other folders)
